--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-tap": "^2.0.0",
     "sass": "^1.54.2"
   }
 }
